--- a/src/app/heroes/pages/new-hero-page/new-hero-page.component.html
+++ b/src/app/heroes/pages/new-hero-page/new-hero-page.component.html
@@ -13,7 +13,7 @@
 
       <mat-card-content>
 
-        <div class="grid">
+        <form class="grid" [formGroup]="heroForm" (ngSubmit)="onSubmit()">
 
           <mat-form-field class="col-12 sm:col-6">
             <mat-label>Super héroe</mat-label>
@@ -21,6 +21,7 @@
             matInput
             type="text"
             required
+            formControlName = "superHero"
             />
           </mat-form-field>
 
@@ -30,6 +31,7 @@
             matInput
             type="text"
             required
+            formControlName = "alter_ego"
             />
           </mat-form-field>
 
@@ -39,6 +41,7 @@
             matInput
             type="text"
             required
+            formControlName = "first_appearance"
             />
           </mat-form-field>
 
@@ -48,12 +51,16 @@
             matInput
             type="text"
             required
+            formControlName = "characters"
             />
           </mat-form-field>
 
           <mat-form-field class="col-12">
             <mat-label>Creador</mat-label>
-            <mat-select required="">
+            <mat-select
+              required=""
+              formControlName = "publisher"
+            >
               <mat-option *ngFor="let option of publisher"
               [value]="option.id">
                 {{option.desc}}
@@ -61,8 +68,17 @@
             </mat-select>
           </mat-form-field>
 
+          <mat-form-field class="col-12">
+            <mat-label>Altenative Image</mat-label>
+            <input
+            matInput
+            type="text"
+            formControlName = "alt_img"
+            />
+          </mat-form-field>
 
-        </div>
+
+        </form>
 
         <div class="flex justify-content-between">
           <button
@@ -75,6 +91,7 @@
         <button
           mat-flat-button
           color="primary"
+          (click)="onSubmit()"
         >
         <mat-icon>save</mat-icon>
           Guardar
