--- a/src/app/heroes/pages/new-hero-page/new-hero-page.component.html
+++ b/src/app/heroes/pages/new-hero-page/new-hero-page.component.html
@@ -82,6 +82,7 @@
 
         <div class="flex justify-content-between">
           <button
+          (click)="onDeleteHero()"
           *ngIf="currentHero.id"
           mat-flat-button
           color="warn"
