--- a/src/app/heroes/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/heroes/components/confirm-dialog/confirm-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>¿Esta seguro? </h2>
 <div mat-dialog-content>
-  <p>Este proceso no es reversible, esta a punto de eliminar a</p>
+  <p>Este proceso no es reversible, esta a punto de eliminar a {{data.superhero}}</p>
 </div>
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">No Thanks</button>
