Funcionalidad para iniciar sesion y cerrar sesion

--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -11,7 +11,13 @@
     <input type="password" matInput placeholder="Contraseña">
   </mat-form-field>
 
-  <button mat-button mat-flat-button color="primary" class="icon-after-text">
+  <button
+    mat-button
+    mat-flat-button
+    color="primary"
+    class="icon-after-text"
+    (click)="onLogin()"
+  >
     Ingresar
     <mat-icon>arrow_forward</mat-icon>
   </button>
