--- a/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -33,8 +33,12 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span class="spacer"></span>
-    <button mat-button>
-      Log out
+    <span>{{user?.email}}</span>
+    <button
+      mat-button
+      (click)="onLogout()"
+    >
+      Logout
       <mat-icon>logout</mat-icon>
     </button>
 
